# Athlead

./: .gitignore  Dockerfile
Backend/: Cargo.toml  Dockerfile
Backend/images/: 8f018fb0-9e45-4d24-97d9-38bc258a54cf  Elias  First Photo
Backend/sql/: CreatePersonBatch  table_create.sql
Backend/src/: main.rs
Backend/src/api/: class.rs  contactinfo.rs  contest.rs  contestresult.rs  ctemplate.rs  details.rs  encryption.rs  general.rs  health.rs  helper.rs  location.rs  loggedin.rs  logon.rs  metric.rs  mod.rs  parent_children.rs  person.rs  photos.rs  pupils.rs  service.rs  sportfest.rs  websocket.rs
Backend/src/model/: class.rs  classpupil.rs  contactinfo.rs  contest.rs  contestresult.rs  ctemplate.rs  details.rs  helper.rs  location.rs  logon.rs  metric.rs  mod.rs  parent_children.rs  person.rs  photos.rs  pupil.rs  sportfest.rs  teacher.rs  user.rs
Frontend/: DataStore.swift
TestHTTPS/: CreateCTemplate.http  CreateContactInfo.http  CreateContest.http  CreateContestForSportfest.http  CreateContestResult.http  CreateContestResultsForContest.http  CreateDetails.http  CreateLocation.http  CreateParticipantsForContest.http  CreatePerson.http  CreatePersonBatch.http  CreatePhoto.http  CreatePupil.http  CreateResultsForContest.http  CreateSportfest.http  CreateSportfestWithLocation.http  CreateSportsfest.http  GetAllCTemplates.http  GetAllContactInfos.http  GetAllDetails.http  GetAllPersons.http  GetAllSportfests.http  GetByIdCTemplate.http  GetByIdContactInfo.http  GetByIdContest.http  GetByIdPerson.http  GetByIdSportfest.http  GetCTemplateById.http  GetPhoto.http  (+27 more)
(+65 files in other folders)
